HTTP POST added.

--- a/project_1_http_server/server_root/secret.html
+++ b/project_1_http_server/server_root/secret.html
@@ -1,3 +1,10 @@
+<!-- NXC Data Communications secret.html for HTTP server -->
+<!-- Written by Jongseok Park (cakeng@snu.ac.kr) -->
+<!-- 2023. 9. 11 -->
+
+
+<!-- DO NOT MODIFY THIS FILE!!  -->
+
 <html>
     <head>
         <title>Secret Page!!!</title>
@@ -8,7 +15,7 @@
     <body>
         <section class="jumbotron text-center">
             <div class="container">
-                <img src="/public/images/khl.jpg" class="img-fluid" alt="Unable to load khl.jpg">
+                <img src="/public/khl.jpg" class="img-fluid" alt="Unable to load khl.jpg">
             </div>
         </section>
 
