--- a/project_1_http_server/server_root/index.html
+++ b/project_1_http_server/server_root/index.html
@@ -33,7 +33,8 @@
 					Use this to upload images to the album.
 				</p>
 				<p class="text-secondary small">
-					Accepts .jpg files.
+					Please use .jpg files under 1MiB, <br>
+					with filename in english or numbers.
 				</p>
 				<div class="custom-file w-75">
 					<input type="file" class="custom-file-input" id="customFile">
