Before removing ans

--- a/project_1_http_server/server_root/index.html
+++ b/project_1_http_server/server_root/index.html
@@ -34,7 +34,7 @@
 				</p>
 				<p class="text-secondary small">
 					Please use .jpg files under 1MiB, <br>
-					with filename in english or numbers.
+					with filename in English or numbers.
 				</p>
 				<div class="custom-file w-75">
 					<input type="file" class="custom-file-input" id="customFile">
