--- a/project_1_http_server/server_root/public/album/album_images.html
+++ b/project_1_http_server/server_root/public/album/album_images.html
@@ -1,4 +1,4 @@
-<!-- NXC Data Communications album_images.html for HTTP server -->
+<!-- NXC Data Communications Network album_images.html for HTTP server -->
 <!-- Written by Jongseok Park (cakeng@snu.ac.kr) -->
 <!-- 2023. 9. 11 -->
 
