--- a/project_1_http_server/server_root/secret.html
+++ b/project_1_http_server/server_root/secret.html
@@ -15,7 +15,9 @@
     <body>
         <section class="jumbotron text-center">
             <div class="container">
-                <img src="/public/khl.jpg" class="img-fluid" alt="Unable to load khl.jpg">
+                <marquee scrollamount="20" scrolldelay="1" direction="right">
+                    <img src="/public/khl.jpg" class="img-fluid" alt="Unable to load khl.jpg">
+                </marquee>
             </div>
         </section>
 
