Changed to multithread, added video in album.html

--- a/project_1_http_server/server_root/public/album/album_images.html
+++ b/project_1_http_server/server_root/public/album/album_images.html
@@ -14,3 +14,6 @@
 <div class="card"> <img src="/public/album/image10.jpg" alt="Unable to load image10.jpg"> </div>
 <div class="card"> <img src="/public/album/image11.jpg" alt="Unable to load image11.jpg"> </div>
 <div class="card"> <img src="/public/album/image12.jpg" alt="Unable to load image12.jpg"> </div>
+<div class="card">
+    <video width="320" height="240"controls alt="Unable to load video."> <source src="/public/album/video1.mp4" type="video/mp4"> </video>
+</div>
