--- a/project_1_http_server/server_root/index.html
+++ b/project_1_http_server/server_root/index.html
@@ -62,7 +62,7 @@
 	    </div>
 	    <hr>
 	    <footer class="text-center">
-		<p>M2608.001200 INTRODUCTION TO DATA COMMUNICATION NETWORKS FALL 2024</p>
+		<p>INTRODUCTION TO DATA COMMUNICATION NETWORKS FALL 2024</p>
 		<div class="container w-25 text-center">
 			<img src="/public/nxclab.jpg" class="img-fluid" alt="Unable to load nxclab.jpg">
 		</div>
