feature_vector implementation + rx bytes

--- a/dcn_project_feature/src/public/index.html
+++ b/dcn_project_feature/src/public/index.html
@@ -11,12 +11,10 @@
     <h2>Server-side</h2>
     <video id="localVideo_1" controls autoplay muted ></video>
     <button id="playButton_1">Play Video 1</button>
+    <button id="intermediateButton">inference</button>
   </div>
 
-  <div class="video-container">
-    <h2>Client-side</h2>
-    <video id="remoteVideo" controls autoplay muted></video>
-  </div>
+  <h2>Client-side</h2>
   <img id="capturedImage"></img>
   <button id="connectButton">Connect</button>
   <button id="generateButton">Generate</button>
